Prevent word-wrap in code blocks

--- a/css/screen.css
+++ b/css/screen.css
@@ -993,6 +993,7 @@ code {
   padding: 0;
   border: none;
   border-radius: 0;
+  word-wrap: initial;
 }
 
 /*
