--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -305,6 +305,7 @@ code
 	padding:0;
 	border:none;
   border-radius:0;
+  word-wrap:initial;
 }
 /*
 	handled by pygments and scss/vendors/syntax-highlighting.scss
